--- a/SDL2_tutorials/SDL2_tutorials.vcxproj.filters
+++ b/SDL2_tutorials/SDL2_tutorials.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="01_hello_SDL.cpp">
+    <ClCompile Include="02_image.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
