SDL2 event handling (via event polling)

--- a/SDL2_tutorials/SDL2_tutorials.vcxproj.filters
+++ b/SDL2_tutorials/SDL2_tutorials.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="02_image.cpp">
+    <ClCompile Include="03_events.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
