More event handling, keyboard inputs this time.

--- a/SDL2_tutorials/SDL2_tutorials.vcxproj.filters
+++ b/SDL2_tutorials/SDL2_tutorials.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="03_events.cpp">
+    <ClCompile Include="04_key_presses.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
