--- a/SDL2_tutorials/SDL2_tutorials.vcxproj
+++ b/SDL2_tutorials/SDL2_tutorials.vcxproj
@@ -122,7 +122,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="03_events.cpp" />
+    <ClCompile Include="04_key_presses.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
